dev: another fix for headings on mobile

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -77,6 +77,7 @@ a:hover {
   .heading-medium-article {
     font-size: 2.5rem;
     margin-top: 2rem;
+    line-height: 1.1;
     letter-spacing: 1px;
     text-shadow: 3px 3px $white;
   }
